# order-mgmt-product

./: Cargo.toml  README.md  go.mod  go.sum  test.db
ent/: client.go  ent.go  mutation.go  product.go  product_create.go  product_delete.go  product_query.go  product_update.go  runtime.go
ent/enttest/: enttest.go
ent/hook/: hook.go
ent/migrate/: schema.go
ent/product/: product.go  where.go
ent/runtime/: runtime.go
ent/schema/: product.go
src/: main.rs
src/handle/: product.rs
src/model/: product.rs
src/provider/: mod.rs
src/service/: mod.rs  product.rs
