[package]
name = "order-mgmt-product"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
log = "0.4.21"
serde = { version = "1.0.202", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
